Tickets with MVC on Hystrix